2006-03-05  Titus Brown  <t@issola.caltech.edu>

	* Cleaned up some of the stdout issues with nose.

	* fixed buggishness in shell code.

	* Made sure to close fp in tidy code.

2006-02-28  Titus Brown  <t@issola.caltech.edu>

	* runfile now allows multiple filenames properly.

2006-02-21  Titus Brown  <t@issola.caltech.edu>

	* TwillAssertionError no longer subclasses AssertionError.

	* execute_command now takes a cmdinfo argument so that line number
	  of input can be traced in errors.

2006-02-16  Titus Brown  <t@issola.caltech.edu>

	* Fixed 'run_tidy' >& error on windows.

	* Fixed "file:" URLs for which result.code doesn't exist.

2006-02-09  Titus Brown  <t@issola.caltech.edu>

	* Added 'equiv-refresh' debug option.

2006-02-08  Titus Brown  <t@issola.caltech.edu>

	* 0.8.3 RELEASE

	* fixed minor links parsing bug (seek(0) prior to parsing!)

	* renamed wwwsearch/ to other_packages/.

	* added BeautifulSoup.

2006-02-06  Titus Brown  <t@issola.caltech.edu>

	* 0.8.2 RELEASE.

	* Documented config options.

	* Added in parse_errors stuff: config parse options now all work.

	* Wedged in all of the mechanize parse Factory refactoring.

	* Refactored a bit to use Factory() amalgamation.  In particular,
	  removed title() override in PatchedMechanizeBrowser; built a
	  Factory subclass in utils; and removed external references to
	  TidyAware code.

2006-02-05  Titus Brown  <t@issola.caltech.edu>

	* Added 'set_output' command to redirect all output elsewhere.

	* Updated pyparsing to 1.4.1.

2006-02-04  Titus Brown  <t@issola.caltech.edu>

	* added execute_string.

	* Updated wsgi_intercept to latest (non-caching) version.

	* Removed test-wsgi-intercept code.

2006-02-01  Titus Brown  <t@issola.caltech.edu>

	* Added ignore_errors functioning into wwwsearch code; now, when
	  ignore_errors=True on form parsing, parse errors are ignored.

	* Renamed 'do_run_tidy' to 'use_tidy', and 'tidy_should_exist' to
	  'require_tidy'.
