@@ -41,6 +41,33 @@ def execute_twill_script(filename, inp=None, initial_url=None):
         if inp:
             sys.stdin = old
 
+def execute_twill_shell(filename, inp=None, initial_url=None,
+                        fail_on_unknown=False):
+    # use filename as the stdin *for the shell object only*
+    scriptfile = os.path.join(testdir, filename)
+    
+    cmd_inp = open(scriptfile).read()
+    cmd_inp += '\nquit\n'
+    cmd_inp = StringIO(cmd_inp)
+
+    # use inp as the std input for the actual script commands.
+    if inp:
+        inp_fp = StringIO(inp)
+        old, sys.stdin = sys.stdin, inp_fp
+
+    try:
+        try:
+            s = twill.shell.TwillCommandLoop(initial_url=initial_url,
+                                             stdin=cmd_inp,
+                                             fail_on_unknown=fail_on_unknown)
+            s.cmdloop()
+        except SystemExit:
+            pass
+    finally:
+        if inp:
+            sys.stdin = old
+    
+
 def run_server(create_fn, PORT=8080):
     """
     Run a Quixote simple_server on localhost:PORT by forking & then
